2007-03-25  Chong Yidong  <cyd@stupidchicken.com>

	* progmodes/compile.el (compilation-start): Save
	compilation-directory rather than default-directory as local var.
	(compilation-directory): Mark as safe local var.

	* files.el: Don't mark default-directory as a safe local var.

2007-03-25  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-mode.el (c-before-change): Fix BOB bug.
	* progmodes/cc-engine.el: Fix typo.

2007-03-25  Juri Linkov  <juri@jurta.org>

	* compare-w.el (compare-windows): Rename customization group
	`compare-w' to `compare-windows'.
	(compare-windows-whitespace, compare-ignore-whitespace)
	(compare-ignore-case, compare-windows-sync)
	(compare-windows-sync-string-size, compare-windows-recenter)
	(compare-windows-highlight, compare-windows): Change group name in
	the `group' tag from `compare-w' to `compare-windows'.
	(compare-windows-sync): Add option `nil' for no sync.  Doc fix.

2007-03-24  Markus Triska  <markus.triska@gmx.at>

	* expand.el: Change example to always enable abbrev-mode, and
	remove redundant `function'.
	(expand-abbrev-hook): Add autoload cookie.

2007-03-24  Ryan Yeske  <rcyeske@gmail.com>

	* emacs-lisp/testcover.el (testcover-start, testcover-end)
	(testcover-mark-all, testcover-unmark-all): Add prompts to
	interactive specs.

2007-03-24  Jason Rumney  <jasonr@gnu.org>

	* autorevert.el (find-file-hook, auto-revert-tail-mode):
	Use file size in bytes for auto-revert-tail-pos not characters.

2007-03-24  Thien-Thi Nguyen  <ttn@gnu.org>

	* vc-rcs.el (vc-rcs-annotate-command):
	Set text property :vc-annotate-prefix on the annotation text.
	(vc-rcs-annotate-time): Instead of searching for ": ",
	search for end of text propertized with :vc-annotate-prefix.

2007-03-24  Martin Rudalics  <rudalics@gmx.at>

	* whitespace.el (top level): Remove calls putting
	permanent-local nil property since these are no-ops.

	* man.el (Man-support-local-filenames): Assure that
	default-directory exists when doing call-process.
